fix(chat-bubbles): Decrease spacing between chat bubbles (#82)
- Removed my margin-bottom from chat bubbles to decrease spacing
- Ensured a more compact and visually appealing layout

Changes summary:
    - Decreased the spacing between chat bubbles by removing the margin-bottom, resulting in a more compact layout.

--- a/src/sass/abstract/_vars.scss
+++ b/src/sass/abstract/_vars.scss
@@ -54,7 +54,7 @@
 	/* ? --- Margins --- */
 	--mt-chat-txt: 0.5rem;
 	--mb-chat-txt: 1rem;
-	--mb-chat-bubble: 2rem;
+	// --mb-chat-bubble: 2rem;
 	--mb-sidebar-nav-li: 0.2rem;
 	--my-pre: 1.5rem;
 
