--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -37,7 +37,7 @@ main [role='presentation'] {
 [data-testid^='conversation-turn-'] {
 	/* Edit icon in user chat for example. Edit state user chat bg  */
 	--main-surface-tertiary: var(--c-surface-3) !important;
-	margin-bottom: var(--mb-chat-bubble) !important;
+	// margin-bottom: var(--mb-chat-bubble) !important;
 
 	div[data-message-author-role],
 	.prose {
